# sliceapi

./: .gitignore  CMakeLists.txt  README.md  cmake.sh  test.cpp
client/: client.cpp
com/platform/util/: ExtractFile.java
include/: BaseDataStruct.h  ComDocIO.h  JavaApi.h  MicroComDocIO.h  Utils.h  export.h  interface.h
source/: ComDocIO.cpp  JavaApi.cpp  MicroComDocIO.cpp  Utils.cpp  export.cpp  interface.cpp
test/: CMakeLists.txt  test.cpp
thrift/: .slice.thrift.swp  CMakeLists.txt  MdsUtil.cpp  SliceEntry_server.skeleton.cpp  server.cpp  shared.thrift  slice.thrift  tutorial.thrift
thrift/client/: CMakeLists.txt  client.cpp
thrift/gen-cpp/: Calculator_server.skeleton.cpp  SliceEntry.cpp  SliceEntry.h  SliceEntry_server.skeleton.cpp  slice_constants.cpp  slice_constants.h  slice_types.cpp  slice_types.h
thrift/server/: CMakeLists.txt
