cmake_minimum_required(VERSION 2.8)
project(server)
aux_source_directory(gen-cpp DIR_SRCS)
aux_source_directory(. DIR_SRCS)
aux_source_directory(../source DIR_SRCS)
list(REMOVE_ITEM DIR_SRCS "gen-cpp/SliceEntry_server.skeleton.cpp")
list(REMOVE_ITEM DIR_SRCS "../source/JavaApi.cpp")
list(REMOVE_ITEM DIR_SRCS "../source/MicroComDocIO.cpp")
#set(CMAKE_EXE_LINKER_FLAGS "-static -pthread -lrt -ldl")
add_compile_options(-std=c++0x -fPIC)
set(QT_INC "$ENV{QTDIR}/include")
set(QT_LIB "$ENV{QTDIR}/lib")
include_directories(${QT_INC})
link_directories(${QT_LIB})
set(TARGET thrift-server)
add_executable(${TARGET} ${DIR_SRCS})
target_link_libraries(${TARGET} thrift Qt5Gui Qt5Core Qt5Xml)
SET_TARGET_PROPERTIES (${TARGET} PROPERTIES LINK_SEARCH_START_STATIC 1)
SET_TARGET_PROPERTIES (${TARGET} PROPERTIES LINK_SEARCH_END_STATIC 1)
