cmake_minimum_required(VERSION 2.8)
project(server)
aux_source_directory(. DIR_SRCS)
aux_source_directory(../gen-cpp DIR_SRCS)
set(CMAKE_EXE_LINKER_FLAGS "-static -pthread -lrt -ldl")
add_compile_options(-std=c++0x)
set(TARGET thrift-server)
add_executable(${TARGET} ${DIR_SRCS})
target_link_libraries(${TARGET} libthrift.a)
SET_TARGET_PROPERTIES (${TARGET} PROPERTIES LINK_SEARCH_START_STATIC 1)
SET_TARGET_PROPERTIES (${TARGET} PROPERTIES LINK_SEARCH_END_STATIC 1)
